package domain.entities.attendant;

import domain.entities.EntityId;

public class AttendantId extends EntityId{

    public AttendantId(int id) {
        super(id);
    }

    
}