@startuml

skinparam componentStyle uml2

package "'Attendant' Aggregate" <<Rectangle>> {
	class Attendant <<(A,#fffab8) Aggregate Root>> {
		String password
		AttendantId id
	}
	class AttendantId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
}
Attendant --> AttendantId : id
Attendant --|> Person


@enduml
